clean after calculating progress

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,11 +53,15 @@ jobs:
         run: |
           python configure.py -r us
           ninja 
-          ninja -t clean         
+          ninja -t clean
 
       - name: Print progress(Debug)
         run: |
           .\tools\ProgressCalculator.exe
+
+      - name: Clean Debug
+        run: |
+          ninja -t clean
 
       - name: Build Release
         run: |
