--- a/config/Release_eu/dol_slices.yml
+++ b/config/Release_eu/dol_slices.yml
@@ -6,6 +6,17 @@ kartLocale.cpp:
     .sbss: [0x803d4980, 0x803d4988]
     .sdata2: [0x803d63e0, 0x803d6408]
 
+JSystem/JKernel/JKRAram.cpp:
+    .text: [0x8000a540, 0x8000b3b0]
+    .ctors: [0x802d84ac, 0x802d84b0]
+    .rodata: [0x8032cdd0, 0x8032ce00]
+    .data: [0x80347ac8, 0x80347b08]
+    .bss: [0x8036deb0, 0x8036ded8]
+    #.bss: [0x803ae920, 0x803ae92c]    
+    .sbss: [0x803d4998, 0x803d49d8]
+    .sdata: [0x803d3258, 0x803d3260]
+    .sdata2: [0x803d6460, 0x803d6468]
+
 JSystem/JKernel/JKRAramBlock.cpp:
     .text: [0x8000beac, 0x8000c138]
     .data: [0x80347b78, 0x80347b88]
