--- a/config/MarioClub_us/dol_slices.yml
+++ b/config/MarioClub_us/dol_slices.yml
@@ -72,7 +72,6 @@ JSystem/JKernel/JKRAram.cpp:
     .sbss: [0x804158a0, 0x804158e0]
     .sdata2: [0x80417a00, 0x80417a10]
 
-
 JSystem/JKernel/JKRAramBlock.cpp:
     .text: [0x8007afac, 0x8007b228]
     .data: [0x8038b180, 0x8038b190]
@@ -172,6 +171,13 @@ JSystem/JKernel/JKRFileLoader.cpp:
     #.sdata: [0x80414098, 0x804140a0]
     #.sbss: [0x804159a8, 0x804159d0]
     #.sdata2: [0x80417af8, 0x80417b18]
+
+JSystem/JKernel/JKRMemArchive.cpp:
+    .text: [0x800853bc, 0x80085cf4]
+    .rodata: [0x803673a8, 0x80367438]
+    .data: [0x8038b478, 0x8038b4c8]
+    .sdata2: [0x80417b18, 0x80417b28]
+
 
 JSystem/JKernel/JKRSolidHeap.cpp:
     .text: [0x80085cf4, 0x80086734]
